# pycounts

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  example.ipynb
src/pycounts/: __init__.py  pycounts.py
tests/: test_pycounts.py
